FACES-1954 Develop alloy:inputTime component FACES-1897 Develop alloy:inputDate component (Refactor inputDate to be more consistent with inputTime) FACES-1714 Develop Liferay Faces Showcase (added use-cases for inputDate and made inputDate use-cases consistent with inputTime)

--- a/alloy/src/main/resources/META-INF/resources/liferay-faces-alloy/alloy.css
+++ b/alloy/src/main/resources/META-INF/resources/liferay-faces-alloy/alloy.css
@@ -15,6 +15,11 @@ div.alloy-dialog {
 	text-align: center;
 }
 
+/* alloy-input-date / alloy-input-time */
+.alloy-input-date .alloy-button, .alloy-input-time .alloy-button {
+	margin-bottom: 10px;
+}
+
 /* alloy-input-file */
 .alloy-input-file .select-files-box,.alloy-input-file .upload-files-box {
 	display: inline-block;
