--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputtime/min-max/inputTime.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputtime/min-max/inputTime.xhtml
@@ -5,16 +5,18 @@
 
 	<ui:define name="col1">
 		<h:form>
-			<showcase:example description="#{i18n['alloy-inputdate-date-pattern-example']}">
-				<alloy:inputDate id="birthday" datePattern="EEEE, MMM dd, yyyy" value="#{inputDateModelBean.birthday}" />
+			<showcase:example description="#{i18n['valid-time-range']}: 09:00:00 - 17:00:00">
+				<alloy:inputTime id="time" value="#{inputTimeModelBean.time}" showOn="button" maxTime="17:00:00"
+					minTime="09:00:00" timePattern="hh:mm a" />
+				<alloy:message for="time" />
 				<hr />
 				<alloy:commandButton value="#{i18n['submit']}">
 					<f:ajax execute="@form" render="@form" />
 				</alloy:commandButton>
 			</showcase:example>
 			<showcase:outputModel>
-				<alloy:outputText id="modelValue" value="#{inputDateModelBean.birthday}">
-					<f:convertDateTime pattern="EEEE, MMM dd, yyyy" />
+				<alloy:outputText id="modelValue" value="#{inputTimeModelBean.time}">
+					<f:convertDateTime pattern="hh:mm a" />
 				</alloy:outputText>
 			</showcase:outputModel>
 		</h:form>
