FACES-1982 Develop alloy:panel component

--- a/alloy/src/main/resources/META-INF/resources/liferay-faces-alloy/alloy.css
+++ b/alloy/src/main/resources/META-INF/resources/liferay-faces-alloy/alloy.css
@@ -16,7 +16,7 @@ div.alloy-dialog {
 }
 
 /* alloy-input-date / alloy-input-time */
-.alloy-input-date .alloy-button, .alloy-input-time .alloy-button {
+.alloy-input-date .alloy-button,.alloy-input-time .alloy-button {
 	margin-bottom: 10px;
 }
 
@@ -52,6 +52,73 @@ ul.alloy-messages {
 	list-style-position: inside;
 	margin: 0px;
 	padding: 4px;
+}
+
+/* alloy-panel: bootstrap 3 backport */
+div.alloy-panel {
+	margin-bottom: 20px;
+	background-color: #fff;
+	border: 1px solid transparent;
+	border-radius: 4px;
+	-webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
+	box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
+}
+
+div.alloy-panel div.alloy-panel-body {
+	padding: 15px;
+}
+
+div.alloy-panel div.alloy-panel-heading {
+	padding: 10px 15px;
+	border-bottom: 1px solid transparent;
+	border-top-left-radius: 3px;
+	border-top-right-radius: 3px;
+}
+
+div.alloy-panel div.alloy-panel-heading>.dropdown .dropdown-toggle {
+	color: inherit;
+}
+
+div.alloy-panel .alloy-panel-title {
+	margin-top: 0;
+	margin-bottom: 0;
+	font-size: 16px;
+	color: inherit;
+}
+
+div.alloy-panel .alloy-panel-title>a {
+	color: inherit;
+}
+
+div.alloy-panel div.alloy-panel-footer {
+	padding: 10px 15px;
+	background-color: #f5f5f5;
+	border-top: 1px solid #ddd;
+	border-bottom-right-radius: 3px;
+	border-bottom-left-radius: 3px;
+}
+
+div.alloy-panel-default {
+	border-color: #ddd;
+}
+
+div.alloy-panel-default>div.alloy-panel-heading {
+	color: #333;
+	background-color: #f5f5f5;
+	border-color: #ddd;
+}
+
+div.alloy-panel-default>div.alloy-panel-heading+.alloy-panel-collapse>div.alloy-panel-body {
+	border-top-color: #ddd;
+}
+
+div.alloy-panel-default>div.alloy-panel-heading .alloy-panel-badge {
+	color: #f5f5f5;
+	background-color: #333;
+}
+
+div.alloy-panel-default>div.panel-footer+div.panel-collapse>div.panel-body {
+	border-bottom-color: #ddd;
 }
 
 /* alloy-popover */
@@ -143,14 +210,11 @@ div.yui3-splitbuttonnav .yui3-menu-content li {
 	border: 0;
 }
 
-.yui3-menu a.yui3-menu-content,
-.yui3-menu .yui3-menu a.yui3-menu-content {
+.yui3-menu a.yui3-menu-content,.yui3-menu .yui3-menu a.yui3-menu-content {
 	border: 0;
 }
 
-div.yui3-menu-horizontal a.yui3-menu-label,
-div.yui3-menu-horizontal .yui3-menu-content span.yui3-menu-label,
-div.yui3-menu-horizontal a.yui3-menuitem-content {
+div.yui3-menu-horizontal a.yui3-menu-label,div.yui3-menu-horizontal .yui3-menu-content span.yui3-menu-label,div.yui3-menu-horizontal a.yui3-menuitem-content {
 	border: 0;
 }
 
