FACES-1714 Develop Liferay Faces Showcase (using alloy:panel on the home page and added laptop image)

--- a/demos/showcase/showcase-webapp/src/main/webapp/resources/css/showcase.css
+++ b/demos/showcase/showcase-webapp/src/main/webapp/resources/css/showcase.css
@@ -2,6 +2,10 @@
 	margin-top: 20px;
 }
 
+.aui div.showcase-home span.alloy-panel-title {
+	font-weight: bold;
+}
+
 .aui .showcase-grid {
 	width: 100%;
 }
