--- a/demos/showcase/showcase-webapp/src/main/webapp/views/home.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/views/home.xhtml
@@ -5,40 +5,43 @@
 	<ui:define name="content">
 		<h:outputStylesheet name="home.css" library="css" />
 		<div class="showcase-home">
-			<alloy:image library="images" name="liferay-faces-logo.png" styleClass="logo" />
 			<h2>Liferay Faces Showcase</h2>
 			<p>
+				<alloy:image library="images" name="laptop.png" style="float: right;" />
 				<a href="https://www.liferay.com/community/liferay-projects/liferay-faces">Liferay Faces</a> is an umbrella project
 				that provides support for the JavaServer<sup>TM</sup> Faces (JSF) standard within Liferay Portal. This showcase
 				application demonstrates usage of Facelet component tags provided by the following sub-projects:
 			</p>
-			<h3>Liferay Faces Alloy</h3>
-			<p>
-				The <a href="https://www.liferay.com/community/liferay-projects/liferay-faces/alloy">Liferay Faces Alloy</a>
-				sub-project provides a suite of JSF UI components that utilize <a href="http://alloyui.com/">Alloy UI</a>.
-			</p>
-			<p>
-				The Facelet component tags provided by Liferay Faces Alloy are prefixed with the <strong>alloy:</strong> namespace.
-			</p>
-			<h3>Liferay Faces Bridge</h3>
-			<p>
-				The <a href="https://www.liferay.com/community/liferay-projects/liferay-faces/bridge">Liferay Faces Bridge</a> is a
-				portlet bridge for JSF which provides the ability to deploy JSF web applications as portlets within Liferay Portal.
-			</p>
-			<p>
-				The Facelet component tags provided by Liferay Faces Bridge are prefixed with the <strong>bridge:</strong> and <strong>portlet:</strong>
-				namespaces.
-			</p>
-			<h3>Liferay Faces Portal</h3>
-			<p>
-				The <a href="https://www.liferay.com/community/liferay-projects/liferay-faces/portal">Liferay Faces Portal</a>
-				sub-project provides JSF utilities, EL keywords, and a suite of JSF UI components that are Facelet equivalents of
-				the JSP tag libraries provided by Liferay Portal.
-			</p>
-			<p>
-				The Facelet component tags provided by Liferay Faces Portal are prefixed with the <strong>liferay-ui:</strong>, <strong>liferay-util</strong>,
-				and <strong>liferay-security:</strong> namespaces.
-			</p>
+			<alloy:panel headerText="Liferay Faces Alloy">
+				<p>
+					The <a href="https://www.liferay.com/community/liferay-projects/liferay-faces/alloy">Liferay Faces Alloy</a>
+					sub-project provides a suite of JSF UI components that utilize <a href="http://alloyui.com/">Alloy UI</a>.
+				</p>
+				<p>
+					The Facelet component tags provided by Liferay Faces Alloy are prefixed with the <strong>alloy:</strong> namespace.
+				</p>
+			</alloy:panel>
+			<alloy:panel headerText="Liferay Faces Bridge">
+				<p>
+					The <a href="https://www.liferay.com/community/liferay-projects/liferay-faces/bridge">Liferay Faces Bridge</a> is a
+					portlet bridge for JSF which provides the ability to deploy JSF web applications as portlets within Liferay Portal.
+				</p>
+				<p>
+					The Facelet component tags provided by Liferay Faces Bridge are prefixed with the <strong>bridge:</strong> and <strong>portlet:</strong>
+					namespaces.
+				</p>
+			</alloy:panel>
+			<alloy:panel headerText="Liferay Faces Portal">
+				<p>
+					The <a href="https://www.liferay.com/community/liferay-projects/liferay-faces/portal">Liferay Faces Portal</a>
+					sub-project provides JSF utilities, EL keywords, and a suite of JSF UI components that are Facelet equivalents of
+					the JSP tag libraries provided by Liferay Portal.
+				</p>
+				<p>
+					The Facelet component tags provided by Liferay Faces Portal are prefixed with the <strong>liferay-ui:</strong>, <strong>liferay-util</strong>,
+					and <strong>liferay-security:</strong> namespaces.
+				</p>
+			</alloy:panel>
 		</div>
 	</ui:define>
 
