FACES-1714 Develop Liferay Faces Showcase (adjusted height of source code preview)

--- a/demos/showcase/showcase-webapp/src/main/webapp/views/component.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/views/component.xhtml
@@ -34,7 +34,7 @@
 		<alloy:tabView value="#{showcaseModelBean.selectedComponent.useCaseCodeExamples}" var="useCaseCodeExample">
 			<alloy:tab label="#{useCaseCodeExample.fileName}">
 				<alloy:inputSourceCode mode="#{useCaseCodeExample.fileExtension}" readOnly="true" showPrintMargin="false"
-					useWrapMode="false" width="1100" value="#{useCaseCodeExample.rawText}" />
+					useWrapMode="false" height="600" width="1100" value="#{useCaseCodeExample.rawText}" />
 			</alloy:tab>
 		</alloy:tabView>
 	</ui:define>
