--- a/demos/showcase/showcase-webapp/src/main/webapp/views/home.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/views/home.xhtml
@@ -18,11 +18,12 @@
 				</f:facet>
 				<p>
 					The <a href="https://www.liferay.com/community/liferay-projects/liferay-faces/alloy" target="_blank">Liferay
-						Faces Alloy</a> sub-project provides a suite of JSF UI components that utilize <a href="http://alloyui.com/"
+						Faces Alloy</a> sub-project includes a suite of JSF UI components that utilize <a href="http://alloyui.com/"
 						target="_blank">Alloy UI</a>.
 				</p>
 				<p>
-					The Facelet component tags are prefixed with the <strong>alloy:</strong> namespace.
+					The Facelet component tags are prefixed with the <strong>alloy:</strong> namespace and are compatible with <strong>webapp
+						and portlet environments</strong>.
 				</p>
 			</alloy:panel>
 			<alloy:panel>
@@ -32,11 +33,14 @@
 				<p>
 					The <a href="https://www.liferay.com/community/liferay-projects/liferay-faces/bridge" target="_blank">Liferay
 						Faces Bridge</a> sub-project includes a <a href="https://www.jcp.org/en/jsr/detail?id=329" target="_blank">JSR 329</a>
-					certified portlet bridge which provides the ability to deploy JSF 2.2 web applications as portlets within Liferay
-					Portal.
+					certified portlet bridge which provides the ability to deploy JSF 1.x/2.x web applications as portlets within <a
+						href="https://jcp.org/en/jsr/detail?id=286" target="_blank">JSR 286</a> (Portlet 2.0) compliant portal servers
+					such as <a href="http://www.liferay.com/community/liferay-projects/liferay-portal" target="_blank">Liferay
+						Portal</a>.
 				</p>
 				<p>
-					The Facelet component tags are prefixed with the <strong>bridge:</strong> and <strong>portlet:</strong> namespaces.
+					The Facelet component tags are prefixed with the <strong>bridge:</strong> and <strong>portlet:</strong> namespaces
+					and are only compatible with <strong>portlet environments</strong>.
 				</p>
 			</alloy:panel>
 			<alloy:panel>
@@ -45,11 +49,12 @@
 				</f:facet>
 				<p>
 					The <a href="https://www.liferay.com/community/liferay-projects/liferay-faces/portal" target="_blank">Liferay
-						Faces Portal</a> sub-project provides JSF utilities, EL keywords, and a suite of JSF UI components for use with <a
+						Faces Portal</a> sub-project includes JSF utilities, EL keywords, and a suite of JSF UI components for use with <a
 						href="http://www.liferay.com/community/liferay-projects/liferay-portal" target="_blank">Liferay Portal</a>.
 				</p>
 				<p>
-					The Facelet component tags are prefixed with the <strong>portal:</strong> namespace.
+					The Facelet component tags are prefixed with the <strong>portal:</strong> namespace are only compatible with <strong>Liferay
+						portlet environments</strong>.
 				</p>
 			</alloy:panel>
 		</div>
