FACES-1901 Develop alloy:tab and alloy:tabView components (changed label attribute to headerText) FACES-1714 Develop Liferay Faces Showcase (made usage of headerText consistent across alloy:accordion, alloy:panel, and alloy:tabView)

--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/accordion/data-model/accordion.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/accordion/data-model/accordion.xhtml
@@ -3,7 +3,7 @@
 
 	<showcase:example>
 		<alloy:accordion value="#{accordionModelBean.liferayBenefits}" var="liferayBenefit">
-			<alloy:tab label="#{liferayBenefit.label}">
+			<alloy:tab headerText="#{liferayBenefit.label}">
 				<alloy:image name="icon-#{liferayBenefit.imageName}" library="images" />
 				<span>#{liferayBenefit.description}</span>
 			</alloy:tab>
