--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/tabview/dynamic-tabs/tabView.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/tabview/dynamic-tabs/tabView.xhtml
@@ -27,28 +27,28 @@
 				<alloy:outputText value="Open Source" />
 			</alloy:panelGrid>
 			<alloy:tabView>
-				<alloy:tab label="Compatible" rendered="#{tabViewDynamicBean.compatible}">
+				<alloy:tab headerText="Compatible" rendered="#{tabViewDynamicBean.compatible}">
 					<alloy:image library="images" name="compatible.png" />
 					<h4>Compatible With Your IT</h4>
 					<span>Liferay lets you reuse the enterprise software and skills you already have in-house.</span>
 				</alloy:tab>
-				<alloy:tab label="Enterprise Ready" rendered="#{tabViewDynamicBean.enterpriseReady}">
+				<alloy:tab headerText="Enterprise Ready" rendered="#{tabViewDynamicBean.enterpriseReady}">
 					<alloy:image library="images" name="enterprise.png" />
 					<h4>Enterprise Ready</h4>
 					<span>Liferay is designed for scalability, reliablity, and high performance both on-premise and in the
 						cloud.</span>
 				</alloy:tab>
-				<alloy:tab label="Powerful Integration" rendered="#{tabViewDynamicBean.powerfulIntegration}">
+				<alloy:tab headerText="Powerful Integration" rendered="#{tabViewDynamicBean.powerfulIntegration}">
 					<alloy:image library="images" name="integration.png" />
 					<h4>Powerful Integration</h4>
 					<span>Liferay is designed for integrating with both enterprise systems and web-based resources.</span>
 				</alloy:tab>
-				<alloy:tab label="Lightweight" rendered="#{tabViewDynamicBean.lightweight}">
+				<alloy:tab headerText="Lightweight" rendered="#{tabViewDynamicBean.lightweight}">
 					<alloy:image library="images" name="lightweight.png" />
 					<h4>Lightweight and Agile</h4>
 					<span>With Liferay, projects are completed faster and with smaller budgets so you can see immediate results.</span>
 				</alloy:tab>
-				<alloy:tab label="Open Source" rendered="#{tabViewDynamicBean.openSource}">
+				<alloy:tab headerText="Open Source" rendered="#{tabViewDynamicBean.openSource}">
 					<alloy:image library="images" name="open-source.png" />
 					<h4>Built With Open Source</h4>
 					<span>Our open source community fosters innovation, increase security, and improves quality of the software.</span>
