--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/accordion/general/accordion.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/accordion/general/accordion.xhtml
@@ -3,7 +3,7 @@
 	xmlns:showcase="http://xmlns.jcp.org/jsf/composite/showcase" template="/templates/component-2col.xhtml">
 
 	<ui:define name="col1">
-		<!-- Example 1: Specifying a header facet with an image and text -->
+		<!-- Example 1: Specifying the header facet -->
 		<alloy:outputStylesheet>
 			.accordion-example-1 .toggler-header img {
 				margin-right: 4px;
@@ -52,7 +52,7 @@
 	</ui:define>
 
 	<ui:define name="col2">
-		<!-- Example 2: Specifying header text and styling via CSS -->
+		<!-- Example 2: Specifying the headerText attribute -->
 		<alloy:outputStylesheet>
 			.accordion-example-2 .toggler-header {
 				font-style: italic;
@@ -83,24 +83,24 @@
 		</alloy:outputStylesheet>
 		<showcase:example description="#{i18n['alloy-accordion-general-example-2']}" number="2">
 			<alloy:accordion styleClass="accordion-example-2">
-				<alloy:tab contentClass="content-compatible" headerClass="header-compatible" label="Compatible">
+				<alloy:tab contentClass="content-compatible" headerClass="header-compatible" headerText="Compatible">
 					<alloy:image library="images" name="icon-compatible.png" />
 					<span>Liferay lets you reuse the enterprise software and skills you already have in-house.</span>
 				</alloy:tab>
-				<alloy:tab contentClass="content-enterprise" headerClass="header-enterprise" label="Enterprise Ready">
+				<alloy:tab contentClass="content-enterprise" headerClass="header-enterprise" headerText="Enterprise Ready">
 					<alloy:image library="images" name="icon-enterprise.png" />
 					<span>Liferay is designed for scalability, reliablity, and high performance both on-premise and in the
 						cloud.</span>
 				</alloy:tab>
-				<alloy:tab contentClass="content-integration" headerClass="header-integration" label="Powerful Integration">
+				<alloy:tab contentClass="content-integration" headerClass="header-integration" headerText="Powerful Integration">
 					<alloy:image library="images" name="icon-integration.png" />
 					<span>Liferay is designed for integrating with both enterprise systems and web-based resources.</span>
 				</alloy:tab>
-				<alloy:tab contentClass="content-lightweight" headerClass="header-lightweight" label="Lightweight">
+				<alloy:tab contentClass="content-lightweight" headerClass="header-lightweight" headerText="Lightweight">
 					<alloy:image library="images" name="icon-lightweight.png" />
 					<span>With Liferay, projects are completed faster and with smaller budgets so you can see immediate results.</span>
 				</alloy:tab>
-				<alloy:tab contentClass="content-open-source" headerClass="header-open-source" label="Open Source">
+				<alloy:tab contentClass="content-open-source" headerClass="header-open-source" headerText="Open Source">
 					<alloy:image library="images" name="icon-open-source.png" />
 					<span>Our open source community fosters innovation, increase security, and improves quality of the software.</span>
 				</alloy:tab>
