--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/panel/general/panel.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/panel/general/panel.xhtml
@@ -3,29 +3,32 @@
 	xmlns:showcase="http://xmlns.jcp.org/jsf/composite/showcase" template="/templates/component-2col.xhtml">
 
 	<ui:define name="col1">
-		<!-- Example 1: Specifying the headerText and footerText attributes -->
+		<!-- Example 1: Specifying the header and footer facets -->
 		<alloy:form>
 			<showcase:example description="#{i18n['alloy-panel-general-example-1']}" number="1" renderedCheckbox="true">
-				<alloy:panel footerText="#{i18n['footer']}" headerText="#{i18n['header']}"
-					rendered="#{showcaseModelBean.selectedComponent.rendered}">
-					<alloy:outputText value="#{i18n['child']}" />
+				<alloy:panel rendered="#{showcaseModelBean.selectedComponent.rendered}">
+					<f:facet name="header">
+						<alloy:image library="images" name="icon-compatible.png" />
+						<alloy:outputText value="Compatible" />
+					</f:facet>
+					<alloy:image library="images" name="compatible.png" />
+					<h4>Compatible With Your IT</h4>
+					<f:facet name="footer">
+						<span>Liferay lets you reuse the enterprise software and skills you already have in-house.</span>
+					</f:facet>
 				</alloy:panel>
 			</showcase:example>
 		</alloy:form>
 	</ui:define>
 
 	<ui:define name="col2">
-		<!-- Example 2: Specifying the header and footer facets -->
+		<!-- Example 2: Specifying the headerText and footerText attributes -->
 		<alloy:form>
 			<showcase:example description="#{i18n['alloy-panel-general-example-2']}" number="2">
-				<alloy:panel>
-					<f:facet name="header">
-						<alloy:outputText value="#{i18n['header']}" />
-					</f:facet>
-					<alloy:outputText value="#{i18n['child']}" />
-					<f:facet name="footer">
-						<alloy:outputText value="#{i18n['footer']}" />
-					</f:facet>
+				<alloy:panel footerText="Liferay lets you reuse the enterprise software and skills you already have in-house." headerText="Compatible">
+					<alloy:image library="images" name="compatible.png" />
+					<h4>Compatible With Your IT</h4>
+					<span></span>
 				</alloy:panel>
 			</showcase:example>
 		</alloy:form>
