--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/tabview/data-model/tabView.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/tabview/data-model/tabView.xhtml
@@ -3,7 +3,7 @@
 
 	<showcase:example>
 		<alloy:tabView value="#{tabViewModelBean.liferayBenefits}" var="liferayBenefit">
-			<alloy:tab label="#{liferayBenefit.label}">
+			<alloy:tab headerText="#{liferayBenefit.label}">
 				<alloy:image name="#{liferayBenefit.imageName}" library="images" />
 				<h4>#{liferayBenefit.title}</h4>
 				<span>#{liferayBenefit.description}</span>
