--- a/alloy/src/main/resources/META-INF/resources/liferay-faces-alloy/alloy.css
+++ b/alloy/src/main/resources/META-INF/resources/liferay-faces-alloy/alloy.css
@@ -15,6 +15,16 @@ div.alloy-dialog {
 	text-align: center;
 }
 
+div.alloy-dialog div.modal-header {
+	color: #333;
+	background-color: #f5f5f5;
+}
+
+div.alloy-dialog div.modal-header span.alloy-overlay-title {
+	font-size: 16px;
+	font-weight: bold;
+}
+
 /* alloy-input-date / alloy-input-time */
 .alloy-input-date .alloy-button,.alloy-input-time .alloy-button {
 	margin-bottom: 10px;
@@ -80,10 +90,11 @@ div.alloy-panel div.alloy-panel-heading>.dropdown .dropdown-toggle {
 }
 
 div.alloy-panel .alloy-panel-title {
+	color: inherit;
 	margin-top: 0;
 	margin-bottom: 0;
 	font-size: 16px;
-	color: inherit;
+	font-weight: bold;
 }
 
 div.alloy-panel .alloy-panel-title>a {
