FACES-1714 Develop Liferay Faces Showcase (additional visual improvements)

--- a/demos/showcase/showcase-webapp/src/main/webapp/templates/showcase.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/templates/showcase.xhtml
@@ -9,7 +9,9 @@
 	<h:outputStylesheet name="showcase.css" library="css" />
 	<alloy:panelGrid columns="2" columnClasses="showcase-nav-column,showcase-content-column" styleClass="showcase-grid">
 		<alloy:panelGroup layout="block">
-			<alloy:image library="images" name="liferay-faces-logo-nav.png" styleClass="logo" />
+			<alloy:link outcome="home">
+				<alloy:image library="images" name="liferay-faces-logo-nav.png" styleClass="logo" />
+			</alloy:link>
 			<alloy:accordion selectedIndex="#{selectedComponent.categoryIndex}" value="#{listModelBean.showcaseCategories}"
 				var="showcaseCategory">
 				<alloy:tab>
@@ -54,8 +56,7 @@
 				<ui:insert name="content" />
 			</alloy:panelGroup>
 			<alloy:panelGroup layout="block" styleClass="showcase-container showcase-info">
-				<alloy:outputText escape="false" value="#{listModelBean.copyrightInfo}" /> <alloy:outputText
-						escape="false" style="float:right;" value="#{listModelBean.dependencyInfo}" />
+				<alloy:outputText escape="false" value="#{listModelBean.dependencyInfo}" />
 			</alloy:panelGroup>
 		</alloy:panelGroup>
 	</alloy:panelGrid>
