--- a/demos/showcase/showcase-webapp/src/main/webapp/resources/css/showcase.css
+++ b/demos/showcase/showcase-webapp/src/main/webapp/resources/css/showcase.css
@@ -10,11 +10,7 @@
 	font-weight: bold;
 }
 
-.aui .showcase-grid {
-	width: 100%;
-}
-
-.aui .showcase-grid .logo {
+.aui .showcase-nav-col .logo {
 	display: table-caption;
 	margin: 0 auto;
 }
@@ -31,47 +27,50 @@
 	font-size: 0.8em;
 }
 
-.aui .showcase-content-column,.aui .showcase-nav-column {
+.aui .showcase-content-column,.aui .showcase-nav-col {
 	vertical-align: top;
 }
 
-.aui .showcase-nav-column {
+.aui .showcase-nav-col {
 	background-color: #f5f5f5;
 	width: 250px;
 }
 
-.aui .showcase-content-column,.aui .showcase-nav-column {
+.aui .showcase-content-column,.aui .showcase-nav-col {
 	border-radius: 3px;
 	-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
 }
 
-.aui .showcase-nav-column .alloy-accordion {
+.aui .showcase-nav-col .alloy-accordion {
 	margin: 4px 4px 4px 4px;
 }
 
-.aui .showcase-nav-column .alloy-accordion .toggler-header {
+.aui .showcase-nav-col .alloy-accordion .toggler-header {
 	border-top: 1px solid #ffffff;
 	font-weight: bold;
 	padding: 6px;
 }
 
-.aui .showcase-nav-column .alloy-accordion .toggler-header h3 {
+.aui .showcase-nav-col .alloy-accordion .toggler-header h3 {
 	display: inline;
 	margin: 0px;
 	vertical-align: middle;
 }
 
-.aui .showcase-nav-column .alloy-accordion .toggler-header img {
+.aui .showcase-nav-col .alloy-accordion .toggler-header img {
 	vertical-align: middle;
 }
 	
-.aui .showcase-nav-column .alloy-accordion .toggler-content {
+.aui .showcase-nav-col .alloy-accordion .toggler-content {
 	padding: 0px 0px 10px 0px;
 }
 
-.aui .showcase-nav-column .alloy-accordion .category-name {
+.aui .showcase-nav-col .alloy-accordion .category-name {
+	font-size: 16pt;
+	margin-top: 2px;
 	margin-left: 4px;
+	position: absolute;
 }
 
 .showcase-example,.showcase-attribute-value,.showcase-parameter-value,.showcase-model-value,.showcase-container {
