FACES-1990 Develop portal:inputRichText component FACES-1714 Develop Liferay Faces Showcase (added use-cases for portal:inputRichText)

--- a/demos/showcase/showcase-portlet/src/main/webapp/component/portal/inputrichtext/immediate/inputRichText.xhtml
+++ b/demos/showcase/showcase-portlet/src/main/webapp/component/portal/inputrichtext/immediate/inputRichText.xhtml
@@ -1,4 +1,4 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:f="http://xmlns.jcp.org/jsf/core"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:alloy="http://liferay.com/faces/alloy" xmlns:portal="http://liferay.com/faces/portal"
 	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:showcase="http://java.sun.com/jsf/composite/showcase"
 	template="/templates/component-2col.xhtml">
