FACES-1985 Develop portal:navBar, portal:nav, and portal:navItem components (renamed collapsible to responsive and set default value to true)

--- a/demos/showcase/showcase-portlet/src/main/webapp/component/portal/navbar/general/navBar.xhtml
+++ b/demos/showcase/showcase-portlet/src/main/webapp/component/portal/navbar/general/navBar.xhtml
@@ -4,7 +4,7 @@
 
 	<ui:define name="col1">
 		<alloy:form>
-			<showcase:example renderedCheckbox="true">
+			<showcase:example description="#{i18n['portal-navbar-general-example-1']}" renderedCheckbox="true">
 				<portal:navBar rendered="#{showcaseModelBean.selectedComponent.rendered}">
 					<portal:nav>
 						<portal:navItem>
