FACES-1714 Develop Liferay Faces Showcase (reduced size of component name in main component view and set responsive="false" for portal:nav use-cases so that they render correctly on a mobile device)

--- a/demos/showcase/showcase-portlet/src/main/webapp/component/portal/nav/data-model/nav.xhtml
+++ b/demos/showcase/showcase-portlet/src/main/webapp/component/portal/nav/data-model/nav.xhtml
@@ -6,7 +6,7 @@
 	<ui:define name="col1">
 		<showcase:example>
 			<alloy:form>
-				<portal:nav value="#{navModelBean.liferayBenefits}" var="liferayBenefit">
+				<portal:nav responsive="false" value="#{navModelBean.liferayBenefits}" var="liferayBenefit">
 					<portal:navItem>
 						<alloy:commandLink>
 							<alloy:image name="icon-#{liferayBenefit.imageName}" library="images" />
