--- a/demos/showcase/showcase-portlet/src/main/webapp/component/portal/nav/general/nav.xhtml
+++ b/demos/showcase/showcase-portlet/src/main/webapp/component/portal/nav/general/nav.xhtml
@@ -5,7 +5,7 @@
 	<ui:define name="col1">
 		<alloy:form>
 			<showcase:example description="#{i18n['portal-nav-general-example-1']}" number="1" renderedCheckbox="true">
-				<portal:nav rendered="#{showcaseModelBean.selectedComponent.rendered}">
+				<portal:nav rendered="#{showcaseModelBean.selectedComponent.rendered}" responsive="false">
 					<portal:navItem>
 						<alloy:commandLink value="Compatible" />
 					</portal:navItem>
@@ -29,7 +29,7 @@
 	<ui:define name="col2">
 		<alloy:form>
 			<showcase:example description="#{i18n['portal-nav-general-example-2']}" number="2">
-				<portal:nav styleClass="nav-list">
+				<portal:nav responsive="false" styleClass="nav-list">
 					<portal:navItem iconCssClass="icon-github" href="https://github.com/liferay/liferay-faces" label="Source Code" />
 					<portal:navItem iconCssClass="icon-twitter" href="https://twitter.com/liferayfaces" label="@liferayfaces" />
 				</portal:nav>
