FACES-1996 Unused mode attribute specified on alloy:autoComplete in Custom Filter showcase example

--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/autocomplete/custom-filter/autoComplete.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/autocomplete/custom-filter/autoComplete.xhtml
@@ -8,7 +8,7 @@
 		<h:form>
 			<showcase:example description="#{i18n['alloy-autocomplete-custom-filter-example-1']}" number="1">
 				<alloy:field label="#{i18n['favorite-liferay-benefit']}">
-					<alloy:autoComplete mode="server" serverCustomFilter="#{autoCompleteBackingBean.serverCustomFilter}"
+					<alloy:autoComplete serverCustomFilter="#{autoCompleteBackingBean.serverCustomFilter}"
 						value="#{autoCompleteModelBean.text}">
 						<f:selectItem itemValue="Compatible" />
 						<f:selectItem itemValue="Enterprise Ready" />
@@ -34,7 +34,7 @@
 		<h:form>
 			<showcase:example description="#{i18n['alloy-autocomplete-custom-filter-example-2']}" number="2">
 				<alloy:field label="#{i18n['favorite-liferay-benefit']}">
-					<alloy:autoComplete mode="client" clientCustomFilter="clientCustomFilter"
+					<alloy:autoComplete clientCustomFilter="clientCustomFilter"
 						value="#{autoCompleteModelBean.text}">
 						<f:selectItem itemValue="Compatible" />
 						<f:selectItem itemValue="Enterprise Ready" />
