--- a/demos/showcase/showcase-portlet/src/main/webapp/component/portal/inputrichtext/immediate/inputRichText.xhtml
+++ b/demos/showcase/showcase-portlet/src/main/webapp/component/portal/inputrichtext/immediate/inputRichText.xhtml
@@ -1,6 +1,6 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:alloy="http://liferay.com/faces/alloy" xmlns:portal="http://liferay.com/faces/portal"
-	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:showcase="http://java.sun.com/jsf/composite/showcase"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets" xmlns:showcase="http://xmlns.jcp.org/jsf/composite/showcase"
 	template="/templates/component-2col.xhtml">
 
 	<ui:define name="col1">
