--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputtime/instant-ajax/inputTime.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputtime/instant-ajax/inputTime.xhtml
@@ -3,38 +3,16 @@
 	xmlns:showcase="http://xmlns.jcp.org/jsf/composite/showcase" template="/templates/component-2col.xhtml">
 
 	<ui:define name="col1">
-		<!-- Example 1: Instant-Ajax when a time is selected -->
-		<alloy:form>
-			<showcase:example description="#{i18n['alloy-inputtime-instant-ajax-example-1']}" number="1">
-				<alloy:field label="#{i18n['birthday']}">
+		<alloy:form id="myForm">
+			<showcase:example number="1">
+				<alloy:field label="#{i18n['time']}">
 					<alloy:inputTime id="time" timePattern="hh:mm a" value="#{inputTimeModelBean.time}">
-						<f:ajax render="@form" />
+						<f:ajax render="myForm:outputModel:modelValue" />
 					</alloy:inputTime>
-					<alloy:message for="time" />
 				</alloy:field>
 			</showcase:example>
-			<showcase:outputModel>
-				<alloy:outputText value="#{inputTimeModelBean.time}">
-					<f:convertDateTime pattern="hh:mm a" />
-				</alloy:outputText>
-			</showcase:outputModel>
-		</alloy:form>
-	</ui:define>
-
-	<ui:define name="col2">
-		<!-- Example 2: Instant-Ajax when a time is selected or when the user enters a value -->
-		<alloy:form>
-			<showcase:example description="#{i18n['alloy-inputtime-instant-ajax-example-2']}" number="2">
-				<alloy:field label="#{i18n['birthday']}">
-					<alloy:inputTime id="time" timePattern="hh:mm a" value="#{inputTimeModelBean.time}">
-						<f:ajax event="change" render="@form" />
-						<f:ajax event="timeSelect" render="@form" />
-					</alloy:inputTime>
-					<alloy:message for="time" />
-				</alloy:field>
-			</showcase:example>
-			<showcase:outputModel>
-				<alloy:outputText value="#{inputTimeModelBean.time}">
+			<showcase:outputModel id="outputModel">
+				<alloy:outputText id="modelValue" value="#{inputTimeModelBean.time}">
 					<f:convertDateTime pattern="hh:mm a" />
 				</alloy:outputText>
 			</showcase:outputModel>
