--- a/demos/showcase/showcase-webapp/src/main/webapp/resources/css/showcase.css
+++ b/demos/showcase/showcase-webapp/src/main/webapp/resources/css/showcase.css
@@ -171,3 +171,13 @@
 	background-color: transparent;
 	color: #0058ba;
 }
+
+.showcase-video {
+	height: 187px;
+	width: 300px;
+}
+
+.showcase-audio {
+	height: 27px;
+	width: 300px;
+}
